SimpleComplex/Utils 1.x, 2018-04-25
-----------------------------------
- Unicode use function to check for Intl support; class_exist() is lethal
  if using rubbish spl_autoload.
- Release 1.3.

SimpleComplex/Utils 1.x, 2018-04-19
-----------------------------------
- CLI utils-execute should log exception trace.

SimpleComplex/Utils 1.x, 2018-04-19
-----------------------------------
- Dependency try locating external container before resorting to internal
  container.
  Current support only global Slim\App\Container $app, but extendable.
- Release 1.3.

SimpleComplex/Utils 1.x, 2018-04-11
-----------------------------------
- CLI utils-execute support 'yes'/-y pre-confimation
  when combined with 'force'/-f option.

SimpleComplex/Utils 1.x, 2018-04-07
-----------------------------------
- Release 1.2.

SimpleComplex/Utils 1.x, 2018-03-26
-----------------------------------
- Don't chmod and don't detect group-write on non posix compliant file system
  (Windows).
- SectionMapInterface (and SectionMap) as means of eliminating other packages
  depending unnecessarily on the Config package.

SimpleComplex/Utils 1.x, 2017-09-26
-----------------------------------
- Bootstrap shan't use JsonLog class by class::class directly, because that
  makes JsonLog a requirement even when prepareDependencies() is passed
  a logger.
- Documented that Bootstrap::prepareDependencies() requires packages not listed
  among PHP composer requirements.

SimpleComplex/Utils 1.x, 2017-09-24
-----------------------------------
- Bootstrap class.
- Release 1.1.

SimpleComplex/Utils 1.x, 2017-09-22
-----------------------------------
- Utils::arrayMergeRecursive() to combine the best of native
  array_replace_recursive() and array_merge_recursive(), and avoid the latter's
  crazy behaviour of dupe associative key scalar values become array.

SimpleComplex/Utils 1.x, 2017-09-19
-----------------------------------
- Utils::mkdir() handles that PHP native mkdir() might not be able